# Tymovy-projekt

./: CMakeLists.txt  Mapa.cpp  Mapa.h  clovek.h  goblin.cpp  goblin.h  main.cpp  nepritel.cpp  nepritel.h  stvoreni.cpp  stvoreni.h  zvire.cpp  zvire.h
hrac/: hrac.cpp  hrac.h
nepratele/: goblin.cpp  goblin.h
world/: Mapa.cpp
